--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ table, th, td{
                 <section>
                Mexico
               </section>
-                <embed name="mexico" src="mexico.mp3" loop="false" hidden="true" autostart="true">
+                <embed name="mexico" src="/qwe/mexico.mp3" loop="false" hidden="true" autostart="true">
                 
              <audio src="https://cdn.discordapp.com/attachments/535157964437323780/781846983186186260/Mexican_Mariachi_Music.mp3" controls autoplay>
                 </audio>
