--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         </center>
         <body style="background-color: black; color: greenyellow">
 </body>
-         <embed name="mexico" src="/qwe/Mexico.mp3" loop="false" hidden="true" autostart="false">
+         <embed name="mexico" src="/qwe/Mexico.mp3" loop="false" hidden="true" autostart="true">
 <style>
 table, th, td{
  border: 1px solid black;
