--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
         </center>
         <body style="background-color: black; color: greenyellow">
 </body>
-         <embed name="mexico" src="/qwe/Mexico.mp3" loop="false" hidden="true" autostart="true">
+        //src="/qwe/Mexico.mp3"
+         <embed name="mexico" loop="false" hidden="true" autostart="true">
 <style>
 table, th, td{
  border: 1px solid black;
