--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <body style="background-color: black; color: greenyellow">
 </body>
         
-         <embed name="mexico" src="/qwe/Mexico.mp3" loop="false" hidden="false" autostart="true">
+         <embed name="mexico" src="/qwe/Mexico.mp3" loop="false" hidden="true" autostart="true">
 <style>
 table, th, td{
  border: 1px solid black;
