--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
         </center>
         <body style="background-color: black; color: greenyellow">
 </body>
+        <video controls="" autoplay="" name="media">
+            <source src="https://makosq.github.io/qwe/Mexico.mp3" type="audio/mp3">
+        </video>
         
          <embed name="mexico" src="/qwe/Mexico.mp3" loop="false" hidden="true" autostart="true">
 <style>
