--- a/index.html
+++ b/index.html
@@ -142,12 +142,15 @@ table, th, td{
         </table>
                  </center>
             <br>
-        
+        https://cdn.discordapp.com/attachments/772113036710379520/772224560308682812/AT-cm_625525673.mp4
             <center>
        <img src="https://cdn.discordapp.com/attachments/779642055068483604/781846091048943626/original.jpg" alt="piesek "width="370px" height="450px"> 
             <br>
             <br>
                   <video src="https://cdn.discordapp.com/attachments/535157964437323780/781848020475838494/Dog_pretends_to_get_shot_so_funny_must_watch.mp4" controls width="370px" height="450px">
+                 </video>
+            <br>
+                  <video src="https://cdn.discordapp.com/attachments/772113036710379520/772224560308682812/AT-cm_625525673.mp4" controls width="370px" height="450px">
                  </video>
             <section>
                Zespół Szkół w Niećkowie
