--- a/index.html
+++ b/index.html
@@ -152,6 +152,19 @@ table, th, td{
             <br>
                   <video src="https://cdn.discordapp.com/attachments/772113036710379520/772224560308682812/AT-cm_625525673.mp4" controls width="370px" height="450px">
                  </video>
+                <br>
+                  <video src="https://cdn.discordapp.com/attachments/772113036710379520/772225295193079808/AT-cm_312991487.mp4" controls width="370px" height="450px">
+                 </video>
+                <br>
+                  <video src="https://cdn.discordapp.com/attachments/772113036710379520/772224874563239956/AT-cm_482567779.mp4" controls width="370px" height="450px">
+                 </video>
+                <br>
+                <img src="https://cdn.discordapp.com/attachments/778591374105640981/779683548915171358/image0.gif" alt="piesek "width="370px" height="450px">
+                <br>
+                <img src="https://cdn.discordapp.com/attachments/735195760345481310/782910087446528010/unknown-9.png" alt="piesek "width="370px" height="450px"> 
+                <br>
+                <img src="https://media.discordapp.net/attachments/699401875283509288/772746058517839872/tenor_3.gif" alt="piesek "width="370px" height="450px"> 
+                  
             <section>
                Zespół Szkół w Niećkowie
               </section>
